Correct overflow-y scroll

--- a/src/pages/singlePage/singlePage.scss
+++ b/src/pages/singlePage/singlePage.scss
@@ -12,7 +12,7 @@
     .details {
         flex: 3;
         height: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
 
         @include md {
             flex: none;
@@ -97,7 +97,7 @@
         flex: 2;
         background-color: #fcf5f3;
         height: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
 
         @include md {
             flex: none;
